# QuickShare

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  manifest.json
.github/workflows/: build.yml
flatpak/: com.quickshare.app.yml
resources/: colors.json  com.quickshare.app.desktop  qml.qrc
resources/mac/Share via QuickShare.workflow/Contents/: Info.plist  document.wflow
resources/qml/: CustomProgressBar.qml  DropZone.qml  MainWindow.qml  SettingsPanel.qml  Theme.qml  UploadPopup.qml  WindowFrame.qml  main.qml
src/: main.cpp
src/cli/: CliHandler.cpp  CliHandler.h
src/core/: AppConfig.cpp  AppConfig.h  LanguageManager.cpp  LanguageManager.h  SettingsManager.cpp  SettingsManager.h
src/gui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  UploadController.cpp  UploadController.h
src/lang/: enUS.json  plPL.json
src/network/: PixeldrainUploader.cpp  PixeldrainUploader.h  UploadManager.cpp  UploadManager.h
src/utils/: Archiver.cpp  Archiver.h  Clipboard.h  MacUtils.mm  NameGenerator.cpp  NameGenerator.h  SystemUtils.cpp  SystemUtils.h
tests/: test_cli.cpp  test_network.cpp  test_utils.cpp
